fix button text vertical alignment

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -55,7 +55,7 @@
   font-family: $font-display;
   font-size: 1.5rem;
   text-transform: uppercase;
-  padding: 1.8rem 3rem;
+  padding: 2.4rem 3rem 1.8rem 3rem;
   cursor: pointer;
   transition: all 0.2s;
 
